tester/src/test/aya/failure/levels/too-high.aya.txt
In file $FILE:3:8 ->

  1 | data List (A : uType 1) : uType 0
  2 |  | nil
  3 |  | cons A (List A)
              ^^
  
Error: Level mismatch: 1 <= 0
Tycking interrupted due to error(s).
What are you doing?
